appId: host.exp.Exponent
---
- openLink: exp://127.0.0.1:8081
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: "Je passe aux fourneaux"
    direction: UP
- tapOn: "Je passe aux fourneaux"
- waitForAnimationToEnd
- tapOn:
    point: "50%,80%"
- waitForAnimationToEnd
- waitForAnimationToEnd
